--- a/decision_tree.ipynb
+++ b/decision_tree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -10,9 +10,9 @@
      "output_type": "stream",
      "text": [
       "           BIO_SEX     HISPANIC        WHITE        BLACK    NAMERICAN  \\\n",
-      "count  4575.000000  4575.000000  4575.000000  4575.000000  4575.000000   \n",
-      "mean      1.521093     0.111038     0.683279     0.236066     0.036284   \n",
-      "std       0.499609     0.314214     0.465249     0.424709     0.187017   \n",
+      "count  8789.000000  8789.000000  8789.000000  8789.000000  8789.000000   \n",
+      "mean      1.521447     0.111275     0.681079     0.237115     0.036295   \n",
+      "std       0.499568     0.314491     0.466085     0.425337     0.187035   \n",
       "min       1.000000     0.000000     0.000000     0.000000     0.000000   \n",
       "25%       1.000000     0.000000     0.000000     0.000000     0.000000   \n",
       "50%       2.000000     0.000000     1.000000     0.000000     0.000000   \n",
@@ -20,19 +20,19 @@
       "max       2.000000     1.000000     1.000000     1.000000     1.000000   \n",
       "\n",
       "             ASIAN          age        TREG1      ALCEVR1    ALCPROBS1  ...  \\\n",
-      "count  4575.000000  4575.000000  4575.000000  4575.000000  4575.000000  ...   \n",
-      "mean      0.040437    16.493052     0.176393     0.527432     0.369180  ...   \n",
-      "std       0.197004     1.552174     0.381196     0.499302     0.894947  ...   \n",
+      "count  8789.000000  8789.000000  8789.000000  8789.000000  8789.000000  ...   \n",
+      "mean      0.041188    16.499874     0.176698     0.527819     0.370577  ...   \n",
+      "std       0.198736     1.552087     0.381435     0.499254     0.897325  ...   \n",
       "min       0.000000    12.676712     0.000000     0.000000     0.000000  ...   \n",
       "25%       0.000000    15.254795     0.000000     0.000000     0.000000  ...   \n",
       "50%       0.000000    16.509589     0.000000     1.000000     0.000000  ...   \n",
-      "75%       0.000000    17.679452     0.000000     1.000000     0.000000  ...   \n",
+      "75%       0.000000    17.761644     0.000000     1.000000     0.000000  ...   \n",
       "max       1.000000    21.512329     1.000000     1.000000     6.000000  ...   \n",
       "\n",
       "           ESTEEM1        VIOL1      PASSIST     DEVIANT1     SCHCONN1  \\\n",
-      "count  4575.000000  4575.000000  4575.000000  4575.000000  4575.000000   \n",
-      "mean     40.952131     1.618579     0.102514     2.645027    28.360656   \n",
-      "std       5.381439     2.593230     0.303356     3.520554     5.156385   \n",
+      "count  8789.000000  8789.000000  8789.000000  8789.000000  8789.000000   \n",
+      "mean     40.959836     1.611560     0.102970     2.646604    28.348390   \n",
+      "std       5.379021     2.578178     0.303936     3.512776     5.160567   \n",
       "min      18.000000     0.000000     0.000000     0.000000     6.000000   \n",
       "25%      38.000000     0.000000     0.000000     0.000000    25.000000   \n",
       "50%      40.000000     0.000000     0.000000     1.000000    29.000000   \n",
@@ -40,23 +40,23 @@
       "max      50.000000    19.000000     1.000000    27.000000    38.000000   \n",
       "\n",
       "              GPA1       EXPEL1     FAMCONCT      PARACTV      PARPRES  \n",
-      "count  4575.000000  4575.000000  4575.000000  4575.000000  4575.000000  \n",
-      "mean      2.815647     0.040219    22.570557     6.290710    13.398033  \n",
-      "std       0.770167     0.196493     2.614754     3.360219     2.085837  \n",
+      "count  8789.000000  8789.000000  8789.000000  8789.000000  8789.000000  \n",
+      "mean      2.814456     0.039709    22.557379     6.285470    13.399135  \n",
+      "std       0.771208     0.195285     2.627995     3.351315     2.074671  \n",
       "min       1.000000     0.000000     6.300000     0.000000     3.000000  \n",
       "25%       2.250000     0.000000    21.700000     4.000000    12.000000  \n",
       "50%       2.750000     0.000000    23.700000     6.000000    14.000000  \n",
-      "75%       3.500000     0.000000    24.300000     9.000000    15.000000  \n",
+      "75%       3.500000     0.000000    24.300000     8.000000    15.000000  \n",
       "max       4.000000     1.000000    25.000000    18.000000    15.000000  \n",
       "\n",
       "[8 rows x 25 columns]\n",
-      "(2745, 24)\n",
-      "(1830, 24)\n",
-      "(2745,)\n",
-      "(1830,)\n",
-      "[[1309  199]\n",
-      " [ 187  135]]\n",
-      "0.7890710382513662\n"
+      "(5273, 24)\n",
+      "(3516, 24)\n",
+      "(5273,)\n",
+      "(3516,)\n",
+      "[[2755  166]\n",
+      " [ 141  454]]\n",
+      "0.9126848691695109\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.metrics import classification_report\n",
     "import sklearn.metrics\n",
-    "AH_data = pd.read_csv(\"C:/Users/Neema/Desktop/ds/new/health.csv\")\n",
+    "AH_data = pd.read_csv(\"https://raw.githubusercontent.com/nikikumar007/DS_Assignment/master/health.csv\")\n",
     "\n",
     "data_clean = AH_data.dropna()\n",
     "\n",
@@ -111,13 +111,6 @@
     "with open(\"fruit_classifier.txt\", \"w\") as f:\n",
     "    f = tree.export_graphviz(classifier, out_file=f)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
