--- a/decision_tree.ipynb
+++ b/decision_tree.ipynb
@@ -54,9 +54,9 @@
       "(3516, 24)\n",
       "(5273,)\n",
       "(3516,)\n",
-      "[[2755  166]\n",
-      " [ 141  454]]\n",
-      "0.9126848691695109\n"
+      "[[2728  164]\n",
+      " [ 156  468]]\n",
+      "0.9089874857792947\n"
      ]
     }
    ],
@@ -102,14 +102,7 @@
     "\n",
     "dot_data = tree.export_graphviz(classifier,out_file=None,filled=True,rounded=True)\n",
     "graph = pydotplus.graph_from_dot_data(dot_data)\n",
-    "graph.write_png('tree.png')\n",
-    "from sklearn import tree\n",
-    "#from StringIO import StringIO\n",
-    "from io import StringIO\n",
-    "#from StringIO import StringIO \n",
-    "from IPython.display import Image\n",
-    "with open(\"fruit_classifier.txt\", \"w\") as f:\n",
-    "    f = tree.export_graphviz(classifier, out_file=f)"
+    "graph.write_png('tree.png')\n"
    ]
   },
   {
