--- a/decision_tree.ipynb
+++ b/decision_tree.ipynb
@@ -54,9 +54,9 @@
       "(3516, 24)\n",
       "(5273,)\n",
       "(3516,)\n",
-      "[[2728  164]\n",
-      " [ 156  468]]\n",
-      "0.9089874857792947\n"
+      "[[2714  151]\n",
+      " [ 168  483]]\n",
+      "0.9092718998862344\n"
      ]
     }
    ],
@@ -69,9 +69,9 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.metrics import classification_report\n",
     "import sklearn.metrics\n",
-    "AH_data = pd.read_csv(\"https://raw.githubusercontent.com/nikikumar007/DS_Assignment/master/health.csv\")\n",
+    "sn_data = pd.read_csv(\"https://raw.githubusercontent.com/nikikumar007/DS_Assignment/master/health.csv\")\n",
     "\n",
-    "data_clean = AH_data.dropna()\n",
+    "data_clean = sn_data.dropna()\n",
     "\n",
     "data_clean.dtypes\n",
     "print(data_clean.describe())\n",
@@ -104,6 +104,13 @@
     "graph = pydotplus.graph_from_dot_data(dot_data)\n",
     "graph.write_png('tree.png')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
