--- a/decision_tree.ipynb
+++ b/decision_tree.ipynb
@@ -2,7 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from pandas import Series, DataFrame\n",
+    "import matplotlib.pylab as plt\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import sklearn\n",
+    "from sklearn import tree\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn import tree\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -49,54 +67,103 @@
       "75%       3.500000     0.000000    24.300000     8.000000    15.000000  \n",
       "max       4.000000     1.000000    25.000000    18.000000    15.000000  \n",
       "\n",
-      "[8 rows x 25 columns]\n",
-      "(5273, 24)\n",
-      "(3516, 24)\n",
-      "(5273,)\n",
-      "(3516,)\n",
-      "[[2714  151]\n",
-      " [ 168  483]]\n",
-      "0.9092718998862344\n"
+      "[8 rows x 25 columns]\n"
      ]
     }
    ],
    "source": [
-    "from pandas import Series, DataFrame\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import os\n",
-    "import matplotlib.pylab as plt\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.metrics import classification_report\n",
-    "import sklearn.metrics\n",
     "sn_data = pd.read_csv(\"https://raw.githubusercontent.com/nikikumar007/DS_Assignment/master/health.csv\")\n",
-    "\n",
     "data_clean = sn_data.dropna()\n",
-    "\n",
     "data_clean.dtypes\n",
-    "print(data_clean.describe())\n",
-    "predictors = data_clean[['BIO_SEX','HISPANIC','WHITE','BLACK','NAMERICAN','ASIAN',\n",
+    "print(data_clean.describe())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict1 = data_clean[['BIO_SEX','HISPANIC','WHITE','BLACK','NAMERICAN','ASIAN',\n",
     "'age','ALCEVR1','ALCPROBS1','marever1','cocever1','inhever1','cigavail','DEP1',\n",
     "'ESTEEM1','VIOL1','PASSIST','DEVIANT1','SCHCONN1','GPA1','EXPEL1','FAMCONCT','PARACTV',\n",
     "'PARPRES']]\n",
-    "targets = data_clean.TREG1\n",
+    "targets = data_clean.TREG1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5273, 24)\n",
+      "(3516, 24)\n",
+      "(5273,)\n",
+      "(3516,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#splitting the data into test and train data\n",
+    "from sklearn.metrics import classification_report\n",
+    "import sklearn.metrics\n",
     "from sklearn.model_selection import train_test_split\n",
-    "pred_train, pred_test, tar_train, tar_test=train_test_split(predictors, targets, test_size=.4)\n",
+    "pred_train, pred_test, tar_train, tar_test=train_test_split(predict1, targets, test_size=.4)\n",
     "print(pred_train.shape)\n",
     "print(pred_test.shape)\n",
     "print(tar_train.shape)\n",
-    "print(tar_test.shape)\n",
-    "import sklearn\n",
-    "from sklearn import tree\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
+    "print(tar_test.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2741  156]\n",
+      " [ 164  455]]\n",
+      "0.9089874857792947\n"
+     ]
+    }
+   ],
+   "source": [
+    "#using Sklearn to build decision tree\n",
+    "\n",
     "classifier=DecisionTreeClassifier()\n",
     "classifier=classifier.fit(pred_train,tar_train)\n",
     "\n",
-    "predictions=classifier.predict(pred_test)\n",
+    "#determining accuracy and confusion matrix\n",
     "\n",
-    "print(sklearn.metrics.confusion_matrix(tar_test,predictions))\n",
-    "print(sklearn.metrics.accuracy_score(tar_test, predictions))\n",
-    "from sklearn import tree\n",
+    "predict1=classifier.predict(pred_test)\n",
+    "print(sklearn.metrics.confusion_matrix(tar_test,predict1))\n",
+    "print(sklearn.metrics.accuracy_score(tar_test, predict1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "from io import StringIO\n",
     "import pydotplus\n",
     "\n",
@@ -104,20 +171,6 @@
     "graph = pydotplus.graph_from_dot_data(dot_data)\n",
     "graph.write_png('tree.png')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
